ATLAS-3433: complete tth testing for security